14 January 2020: Wouter
	- Removed the dnscrypt_queries and dnscrypt_queries_chacha tests,
	  because dnscrypt-proxy (2.0.36) does not support the test setup
	  any more, and also the config file format does not seem to have
	  the appropriate keys to recreate that setup.

10 January 2020: Wouter
	- Fix the relationship between serve-expired and prefetch options,
	  patch from Saksham Manchanda from Secure64.
	- Fix unreachable code in ssl set options code.

8 January 2020: Ralph
	- Fix #138: stop binding pidfile inside chroot dir in systemd service
	  file.

8 January 2020: Wouter
	- Fix 'make test' to work for --disable-sha1 configure option.
	- Fix out-of-bounds null-byte write in sldns_bget_token_par while
	  parsing type WKS, reported by Luis Merino from X41 D-Sec.
	- Updated sldns_bget_token_par fix for also space for the zero
	  delimiter after the character.  And update for more spare space.

6 January 2020: George
	- Downgrade compat/getentropy_solaris.c to version 1.4 from OpenBSD.
	  The dl_iterate_phdr() function introduced in newer versions raises
	  compilation errors on solaris 10.
	- Changes to compat/getentropy_solaris.c for,
	  ifdef stdint.h inclusion for older systems.
	  ifdef sha2.h inclusion for older systems.

6 January 2020: Wouter
	- Merge #135 from Florian Obser: Use passed in neg and key cache
	  if non-NULL.
	- Fix #140: Document slave not downloading new zonefile upon update.

16 December 2019: George
	- Update mailing list URL.

12 December 2019: Ralph
	- Master is 1.9.7 in development.
	- Fix typo to let serve-expired-ttl work with ub_ctx_set_option(), by
	  Florian Obser

10 December 2019: Wouter
	- Fix to make auth zone IXFR to fallback to AXFR if a single
	  response RR is received over TCP with the SOA in it.

6 December 2019: Wouter
	- Fix ipsecmod compile.
	- Fix Makefile.in for ipset module compile, from Adi Prasaja.
	- release-1.9.6 tag, which became the 1.9.6 release

5 December 2019: Wouter